--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -155,6 +155,13 @@ jobs:
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.vendor=TheHive Project
             org.opencontainers.image.version=${{ env.VERSION }}
+          annotations: |
+            org.opencontainers.image.description=${{ env.DESCRIPTION }}
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.title=${{ env.LOWERCASE_NAME }}
+            org.opencontainers.image.url=https://thehive-project.org
+            org.opencontainers.image.version=${{ env.VERSION }}
 
   build_responders:
     name: Build Responders
@@ -259,7 +266,14 @@ jobs:
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.vendor=TheHive Project
             org.opencontainers.image.version=${{ env.VERSION }}
-
+          annotations: |
+            org.opencontainers.image.description=${{ env.DESCRIPTION }}
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.title=${{ env.LOWERCASE_NAME }}
+            org.opencontainers.image.url=https://thehive-project.org
+            org.opencontainers.image.version=${{ env.VERSION }}
+            
   build_catalog:
     name: Build Catalog
     runs-on: ubuntu-latest
