--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -166,7 +166,15 @@ jobs:
       - name: Set build date
         id: build_date
         run: echo "date=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> "$GITHUB_OUTPUT" 
-      
+  
+      - name: Set Image Tag
+        run: |
+          if [[ "${{ github.ref }}" =~ ^refs/tags/ ]] || [ "${{ github.event_name }}" == "schedule" ]; then
+            echo "IMAGE_TAG=${{ env.VERSION }}" >> $GITHUB_ENV
+          else
+            echo "IMAGE_TAG=${{ github.sha }}" >> $GITHUB_ENV
+          fi        
+
       - name: Build and push multi-arch image to GHCR
         if: steps.check-rebuild.outputs.rebuild == 'true'
         uses: docker/build-push-action@v6
@@ -175,8 +183,7 @@ jobs:
           file: ./analyzers/${{ matrix.directory }}/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ env.LOWERCASE_NAME }}:${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && env.VERSION || 'devel' }}
+          tags: ghcr.io/${{ github.repository_owner }}/${{ env.LOWERCASE_NAME }}:${{ env.IMAGE_TAG }}
           labels: |
             org.opencontainers.image.created=${{ steps.build_date.outputs.date }}
             org.opencontainers.image.title=${{ env.LOWERCASE_NAME }}
@@ -309,6 +316,14 @@ jobs:
         id: build_date
         run: echo "date=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> "$GITHUB_OUTPUT" 
       
+      - name: Set Image Tag
+        run: |
+          if [[ "${{ github.ref }}" =~ ^refs/tags/ ]] || [ "${{ github.event_name }}" == "schedule" ]; then
+            echo "IMAGE_TAG=${{ env.VERSION }}" >> $GITHUB_ENV
+          else
+            echo "IMAGE_TAG=${{ github.sha }}" >> $GITHUB_ENV
+          fi
+
       - name: Build and push multi-arch image to GHCR
         if: steps.check-rebuild.outputs.rebuild == 'true'
         uses: docker/build-push-action@v6
@@ -317,8 +332,7 @@ jobs:
           file: ./responders/${{ matrix.directory }}/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ env.LOWERCASE_NAME }}:${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && env.VERSION || 'devel' }}
+          tags: ghcr.io/${{ github.repository_owner }}/${{ env.LOWERCASE_NAME }}:${{ env.IMAGE_TAG }}
           labels: |
             org.opencontainers.image.created=${{ steps.build_date.outputs.date }}
             org.opencontainers.image.title=${{ env.LOWERCASE_NAME }}
